# quickrefs-index

./: README.rst  pyproject.toml
src/: quickrefs_index.py
